--- a/product-002-keyvault-baseline/002.artifact-compliance-key-vault.md
+++ b/product-002-keyvault-baseline/002.artifact-compliance-key-vault.md
@@ -1,3 +1,5 @@
+[return to main page](../README.md)
+
 003.A-CPL-KV--Art.5_Art.32.md
 This artefact proves alignment with **data-resilience** and **security-of-processing** obligations.
 
@@ -33,3 +35,6 @@ RetentionDays=[int]$ret
 Compliant=($o.properties.enableSoftDelete -and $o.properties.enablePurgeProtection -and $ret -eq 90)
 }
 } | Sort-Object Compliant, Name | Format-Table -AutoSize
+
+
+[go to next module](../product-003-networking-baseline/003-artifact-compliance-networking.md)
