--- a/product-002-keyvault-baseline/002.artifact-compliance-key-vault.md
+++ b/product-002-keyvault-baseline/002.artifact-compliance-key-vault.md
@@ -1,25 +1,21 @@
 [return to main page](../README.md)
 
-003.A-CPL-KV--Art.5_Art.32.md
-This artefact proves alignment with **data-resilience** and **security-of-processing** obligations.
+# Product 2 - Key Vault Resilience & Isolation Baseline:
+Chroni KV przed utrata sekretów i przed dostepem z internetu
+
+> **Business value:**<br>Mniejsze ryzyko utraty kluczy / sekretów.<br>Mocny argument w audycie: retencja + odporność dokumentowane polityką.
 
 
-Even though Microsoft’s built-in policies definitions exist (e.g.: “Key vaults should have soft delete enabled”),
-none of them validate `softDeleteRetentionInDays` for a specific period such as 90 days.
+# Artifacts content: 
+- soft delete + purge protection + 90 dni retention
+- private endpoint only, public network access disabled
+- wymagany Managed Identity po stronie VM / App Service
 
-AUDIT KV PROPERTIES:
-- soft delete enabled,
-- purge protection enabled,
-- retention == 90 days.
 
-WHY:
-Built-in definitions verify purge and soft delete, but none validate the exact softDeleteRetentionInDays = 90.
-Risk: permanent loss of recoverable secrets during audit or breach investigation.
-this custom policy audit for deleted secrets remain recoverable during audit or breach investigation.
+# Artefact implements GDPR Articles 5 and 32.
 
-RGPD Art:
-Article 32 – Security of processing
-Article 5(1)(e) – Storage limitation (personal data shall be kept no longer than necessary but long enough for accountability)
+- Article 32 – Security of processing
+- Article 5(1)(e) – Storage limitation (personal data shall be kept no longer than necessary but long enough for accountability)
 
 
 # tdd
