--- a/product-002-keyvault-baseline/002.artifact-compliance-key-vault.md
+++ b/product-002-keyvault-baseline/002.artifact-compliance-key-vault.md
@@ -1,36 +1,66 @@
 [return to main page](../README.md)
 
-# Product 2 - Key Vault Resilience & Isolation Baseline:
-Chroni KV przed utrata sekretów i przed dostepem z internetu
+# Product 2 - Key Vault Resilience & Isolation Baseline
 
-> **Business value:**<br>Mniejsze ryzyko utraty kluczy / sekretów.<br>Mocny argument w audycie: retencja + odporność dokumentowane polityką.
-
-
-# Artifacts content: 
-- soft delete + purge protection + 90 dni retention
-- private endpoint only, public network access disabled
-- wymagany Managed Identity po stronie VM / App Service
+Key Vault faces the risks of irreversible secret loss, public exposure, and static-credential access. 
+The artifact deals with these problems by using purge protection, private-only network access, and mandatory Managed Identity, the configuration makes deletions reversible, forces all traffic through a private path, and replaces stored credentials with verified identities. 
 
 
 # Artefact implements GDPR Articles 5 and 32.
-
 - Article 32 – Security of processing
 - Article 5(1)(e) – Storage limitation (personal data shall be kept no longer than necessary but long enough for accountability)
 
 
 # tdd
-az keyvault list --query "[].{name:name,rg:resourceGroup}" -o tsv |
-ForEach-Object {
-$p = $_ -split "`t"
-$o = az keyvault show -n $p[0] -g $p[1] -o json | ConvertFrom-Json
-$ret = $o.properties.softDeleteRetentionInDays; if ($null -eq $ret) {$ret = 0}
-[pscustomobject]@{
-Name=$o.name; SoftDelete=[bool]$o.properties.enableSoftDelete
-PurgeProtection=[bool]$o.properties.enablePurgeProtection
-RetentionDays=[int]$ret
-Compliant=($o.properties.enableSoftDelete -and $o.properties.enablePurgeProtection -and $ret -eq 90)
-}
-} | Sort-Object Compliant, Name | Format-Table -AutoSize
+
+# technical documentation
+
+Non-compliant resource 
+```tf 
+rm -rf .terraform
+rm -f terraform.tfstate
+rm -f terraform.tfstate.backup
+
+az login
+terraform init
+terraform apply   -var "order_num=0077015"   -var "subscription_id=$(az account show --query id -o tsv)"
+
+```
+Policy definition & assignement
+```pwsh
+
+az account list --output table
+
+[//]az login --tenant <TENANT_ID_OR_DOMAIN>
+[//]az account set --subscription <SUBSCRIPTION_ID>
+[//]file path = /home/lt/_projects/security-audit-runbooks/artifacts
+
+$subId = az account show --query id -o tsv
+$subId
+
+code 002.artifact-compliance-key-vault-audit.json
+cat 002.artifact-compliance-key-vault-audit.json
+
+az policy definition create `
+  --name "002.artifact-compliance-key-vault-audit" `
+  --rules "./002.artifact-compliance-key-vault-audit.json" `
+  --mode All `
+  --subscription $subId
+
+az policy assignment create `
+  --name "002.artifact-compliance-key-vault-audit" `
+  --policy "/subscriptions/$subId/providers/Microsoft.Authorization/policyDefinitions/002.artifact-compliance-key-vault-audit" `
+  --scope "/subscriptions/$subId/resourceGroups/MyResourceGroup-0078001"
+```
+Policy resource evaluation and NonCompliance report.
+```az cli 
+az policy state list -g "MyResourceGroup-0078001" --query "[?policyDefinitionName=='002.artifact-compliance-key-vault-audit']"
+
+az policy state list -g "MyResourceGroup-0078001" --query "[].complianceState"
+
+az policy state list -g "MyResourceGroup-0078001" \
+  --query "sort_by(@, &timestamp)[-1].complianceState"
+```
 
 
-[go to next module](../product-003-networking-baseline/003-artifact-compliance-networking.md)
+[go to next module](../product-003-networking-baseline/003-artifact-compliance-networking.md) 
